[gd_scene load_steps=4 format=3 uid="uid://bk4ov78wur0xf"]

[ext_resource type="Script" uid="uid://dugk2dkbsmcfe" path="res://Scenes/pause_menu.gd" id="1_1och7"]
[ext_resource type="FontFile" uid="uid://75i2xeboijlb" path="res://Assets/Fonts/Audiowide-Regular.ttf" id="2_bpi0q"]
[ext_resource type="Texture2D" uid="uid://bjaa8sb267c3f" path="res://Assets/Environment/background.png" id="3_vmyb1"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 1
script = ExtResource("1_1och7")

[node name="Panel" type="Panel" parent="."]
process_mode = 3
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 43.0
offset_top = 103.0
offset_right = 83.0
offset_bottom = 147.0

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bpi0q")
theme_override_font_sizes/font_size = 24
text = "Resume"
alignment = 0

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bpi0q")
theme_override_font_sizes/font_size = 24
text = "Restart
"
alignment = 0

[node name="ControlsButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bpi0q")
theme_override_font_sizes/font_size = 24
text = "Controls"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bpi0q")
theme_override_font_sizes/font_size = 24
text = "Quit"
alignment = 0

[node name="ControlsPanel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 328.0
offset_top = 148.0
offset_right = 368.0
offset_bottom = 188.0

[node name="Sprite2D" type="Sprite2D" parent="Panel/ControlsPanel"]
position = Vector2(288, 153)
scale = Vector2(0.32, 0.2)
texture = ExtResource("3_vmyb1")

[node name="Label" type="Label" parent="Panel/ControlsPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_bpi0q")
theme_override_font_sizes/font_size = 32
text = "MOVE        → WASD / Arrow Keys

SHOOT       → Space

PAUSE       → Esc"

[node name="BackButton" type="Button" parent="Panel/ControlsPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 254.0
offset_right = 19.0
offset_bottom = 262.0
theme_override_fonts/font = ExtResource("2_bpi0q")
theme_override_font_sizes/font_size = 24
text = "Back <"
alignment = 0

[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Panel/ControlsPanel/BackButton" to="." method="_on_back_button_pressed"]
